2.58    * fix VERSION_STRING for 2.0.x
        * honor --lib_gd_path specific gdlib-config
        * Loosen the comparison tests with GDIMAGETYPE ne gd2
2.57    * fix Jpeg magic number detection RT #26146
        * fix RGB - HSV roundtrips: RT #120572 by J2N-FORGET
        * fix -print-search-dirs errors RT #106265
        * co-maint to rurban
        * add hv_fetchs, CI smokers
        * add GD::VERSION_STRING api
2.56_03 * add alpha method
        * improve option handling
        * fix meta data
2.56_02 * fix feature extraction >= 2.2 [RT #119459]
2.56_01 * rm Build.PL, fix permissions, fix for missing gdlib-config
2.56	* Fix Makefile.PL so that it works again.
2.55	* Great simplification of regression framework ought to fix make test problems.
	* Replace ExtUtils::MakeMaker script with Module::Build system
	  (just in time for Module::Build to be deprecated).
	* Remove archaic qd.pl (for creating QuickDraw picts) from distribution.
2.54	Patch from yurly@unet.net to fix image corruption in rotate180 when image height is odd.
2.53	Points to Gabor Szabo's GD::Simple tutorial, and fix link to repository.
2.52    Fix regression tests to run on Ubuntu 12.04 64bit.
2.51	Fix misleading warning message about location of gd.h file.
2.50	Fix gdUseFontConfig so that it can be called as a class method.
2.49    Add GitHub information to README.
2.48    Fix compile crash on windows and strawberry (https://rt.cpan.org/Public/Bug/Display.html?id=67990).
2.47	Fix compilation on older perl's without the Newxz macros.
2.46    Added a basic "use" test for GD::Simple
2.45	Clarified the GD license. There is now a formal LICENSE file in the package.
2.44    GD::Group now installed properly.
	Quenched compiler warning caused by Newxs() calls.
2.43    Added "transparent" color to GD::Simple.
	Fixed Makefile so that GD/Image.pm depends both on GD/Image.pm.PLS and .config.cache
2.42	Fixed magic number detection to autodetect certain missed jpeg files (thanks to Mike Walker)